Fixed:Word wrap issue

--- a/src/blocks/info-box/style.scss
+++ b/src/blocks/info-box/style.scss
@@ -30,6 +30,7 @@
 }
 .infobox-icon-above-title .uagb-infobox-left-right-wrap {
     text-align: center;
+    word-break: break-word;
 }
 
 .uagb-infobox-photo-left-title .uagb-infobox-title-wrap,
